# genBarcode

./: .gitignore  DEVELOPMENT.md  LICENSE  Makefile  README.md  pyproject.toml
genbarcode/: __main__.py
genbarcode/classes/: CustomExceptions.py  ReturnCodes.py
tests/: conftest.py  tracking-numbers.md
