[tool.poetry]
name = "genBarcode"
version = "v1.0.0"
description = "offline tracking number image rendering tool."
authors = ["Tyler Bennett <tbennett6421@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/tbennett6421/genBarcode"
repository = "https://github.com/tbennett6421/genBarcode"
exclude = ["tests"]
include = ["LICENSE"]
license = "MIT"
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3",
]

packages = [
    { include = "genBarcode"}
]

[tool.poetry.scripts]
genBarcode = 'genBarcode.__main__:main'

[tool.poetry.dependencies]
python = "^3.8.0"
python-barcode = {extras = ["images"], version = "^0.13.1"}

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-asyncio = "*"
flake8 = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
